# Atlas-Workspace-Rust

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Makefile  README.md  atlas.sh
.github/workflows/: rust.yml
Archive/WorkingDocs/: README.md
Docs/Canon/: 00_PROJECT_STATUS.md  01_LOCKED_DIRECTION.md  11_MODULE_BOUNDARIES.md
Docs/Roadmap/: 00_MASTER_ROADMAP.md  00_MASTER_ROADMAP_LEGACY.md
LICENSES/: Apache-2.0  GPL-3.0  MIT
Scripts/: build_cpp_legacy.sh  build_rust.sh  build_shaders.sh  check_rust.sh  fetch_novaforge_assets.sh  test_rust.sh  validate_project.sh
crates/atlas-abi/: Cargo.toml
crates/atlas-abi/src/: lib.rs
crates/atlas-ai/: Cargo.toml
crates/atlas-ai/src/: behavior_graph.rs  lib.rs  memory.rs
crates/atlas-animation/: Cargo.toml
crates/atlas-animation/src/: graph.rs  lib.rs
crates/atlas-asset/: Cargo.toml
crates/atlas-asset/src/: lib.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: error.rs  event_bus.rs  lib.rs  logger.rs  string_id.rs  version.rs
crates/atlas-ecs/: Cargo.toml
crates/atlas-ecs/src/: component.rs  components.rs  delta.rs  entity.rs  lib.rs  scene_graph.rs  system.rs  world.rs
crates/atlas-editor/: Cargo.toml
crates/atlas-editor/src/: app.rs  build_system.rs  command.rs  entity_commands.rs  game_project_adapter.rs  layout_persistence.rs  lib.rs  manifest.rs  notification.rs  project_registry.rs  property_grid.rs  scene_renderer.rs  scene_serial.rs  selection.rs  tool_registry.rs  viewport_host.rs
crates/atlas-editor/src/panels/: asset_browser.rs  console.rs  mod.rs  outliner.rs  properties.rs  viewport.rs
crates/atlas-game/: Cargo.toml
crates/atlas-game/src/: lib.rs  main.rs  module.rs  runner.rs
crates/atlas-graphvm/: Cargo.toml
crates/atlas-graphvm/src/: lib.rs  vm.rs
crates/atlas-input/: Cargo.toml
crates/atlas-input/src/: lib.rs
crates/atlas-math/: Cargo.toml
crates/atlas-math/src/: aabb.rs  color.rs  lib.rs  ray.rs  transform.rs
crates/atlas-net/: Cargo.toml
crates/atlas-net/src/: jitter_buffer.rs  lib.rs  replication.rs
crates/atlas-pcg/: Cargo.toml
crates/atlas-pcg/src/: build_queue.rs  constraint.rs  domain.rs  lib.rs  lod.rs  manager.rs  material_graph.rs  mesh_graph.rs  noise_util.rs  planetary.rs  rng.rs  terrain.rs
crates/atlas-physics/: Cargo.toml
crates/atlas-physics/src/: lib.rs  physics_system.rs
crates/atlas-renderer/: Cargo.toml
crates/atlas-renderer/src/: backend.rs  buffer.rs  context.rs  frame.rs  gbuffer.rs  instanced_renderer.rs  lib.rs  pbr_material.rs  pipeline.rs  post_process.rs  render_loop.rs  render_pass.rs  shader.rs  shader_ir.rs  shadow_map.rs  spatial_hash.rs  swapchain.rs  terrain_mesh.rs  texture.rs  types.rs  viewport.rs
crates/atlas-schema/: Cargo.toml
crates/atlas-schema/src/: lib.rs
crates/atlas-script/: Cargo.toml
crates/atlas-script/src/: assembler.rs  lib.rs  sandbox.rs  system.rs  vm.rs
crates/atlas-sim/: Cargo.toml
crates/atlas-sim/src/: determinism_versioning.rs  lib.rs  replay_recorder.rs  replay_versioning.rs  save_system.rs  sim_mirror.rs  state_hasher.rs  tick_scheduler.rs  tick_step_debugger.rs  time_model.rs  world_state_serializer.rs
crates/atlas-sound/: Cargo.toml
crates/atlas-sound/src/: graph.rs  lib.rs
crates/atlas-ui/: Cargo.toml  build.rs
crates/atlas-ui/shaders/: egui.frag  egui.vert  scene.frag  scene.vert
crates/atlas-ui/src/: context.rs  lib.rs  log_capture.rs  renderer.rs  scroll_list.rs  tree_view.rs
crates/atlas-workspace/: Cargo.toml
crates/atlas-workspace/src/: main.rs
crates/atlas-world/: Cargo.toml
crates/atlas-world/src/: asset_registry.rs  asteroid.rs  galaxy.rs  lib.rs  mod_loader.rs  planet.rs  star_system.rs  universe.rs  world_state.rs
crates/novaforge-game/: Cargo.toml
crates/novaforge-game/src/: adapter.rs  asset_preview.rs  asset_preview_binder.rs  bootstrap.rs  catalog.rs  data_registry.rs  document.rs  document_panel.rs  document_property_grid.rs  document_registry.rs  document_save_pipeline.rs  lib.rs  material_preview.rs  material_preview_binder.rs  module.rs  preview_runtime.rs  preview_world.rs  scene_preview_binder.rs
crates/novaforge-game/src/panels/: character.rs  economy.rs  inventory.rs  missions.rs  mod.rs  progression.rs  shop.rs
crates/novaforge-game/src/pcg/: generator.rs  mod.rs  preview.rs  rule_editor_panel.rs  ruleset.rs  seed_context.rs
crates/novaforge-game/src/systems/: mod.rs
legacy-cpp/: README.md  build.cmd  vcpkg.json
legacy-cpp/Scripts/: build_all.sh  build_cpp_legacy.sh  generate_vs_solution.bat  generate_vs_solution.ps1
novaforge-assets/: README.md
