[workspace]
members = [
    "crates/atlas-core",
    "crates/atlas-math",
    "crates/atlas-ecs",
    "crates/atlas-pcg",
    "crates/atlas-renderer",
    "crates/atlas-world",
    "crates/atlas-workspace",
    "crates/atlas-input",
    "crates/atlas-physics",
    "crates/atlas-sim",
    "crates/atlas-script",
    "crates/atlas-animation",
    "crates/atlas-ai",
    "crates/atlas-sound",
    "crates/atlas-graphvm",
    "crates/atlas-net",
    "crates/atlas-schema",
    "crates/atlas-abi",
    "crates/atlas-asset",
    "crates/atlas-ui",
    "crates/atlas-editor",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Atlas Workspace Contributors"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/shifty81/Atlas-Workspace-Rust"

[workspace.dependencies]
# Intra-workspace
atlas-core       = { path = "crates/atlas-core" }
atlas-math       = { path = "crates/atlas-math" }
atlas-ecs        = { path = "crates/atlas-ecs" }
atlas-pcg        = { path = "crates/atlas-pcg" }
atlas-renderer   = { path = "crates/atlas-renderer" }
atlas-world      = { path = "crates/atlas-world" }
atlas-input      = { path = "crates/atlas-input" }
atlas-physics    = { path = "crates/atlas-physics" }
atlas-sim        = { path = "crates/atlas-sim" }
atlas-script     = { path = "crates/atlas-script" }
atlas-animation  = { path = "crates/atlas-animation" }
atlas-ai         = { path = "crates/atlas-ai" }
atlas-sound      = { path = "crates/atlas-sound" }
atlas-graphvm    = { path = "crates/atlas-graphvm" }
atlas-net        = { path = "crates/atlas-net" }
atlas-schema     = { path = "crates/atlas-schema" }
atlas-abi        = { path = "crates/atlas-abi" }
atlas-asset      = { path = "crates/atlas-asset" }
atlas-ui         = { path = "crates/atlas-ui" }
atlas-editor     = { path = "crates/atlas-editor" }

# Logging
log              = "0.4"
env_logger       = "0.11"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Windowing / input
winit            = { version = "0.29", features = ["rwh_05"] }

# Vulkan
ash              = "0.37"
gpu-allocator    = "0.25"

# Math / noise
glam             = { version = "0.27", features = ["serde"] }
noise            = "0.9"

# Concurrency
rayon            = "1"
parking_lot      = "0.12"

# Misc
thiserror        = "1"
anyhow           = "1"
uuid             = { version = "1", features = ["v4", "serde"] }
bitflags         = "2"

# GUI / UI
egui             = { version = "0.27", default-features = false, features = ["default_fonts"] }
egui-winit       = { version = "0.27", default-features = false }

# Vulkan surface creation helpers
ash-window       = "0.12"
