[package]
name        = "atlas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace     = true
env_logger.workspace = true
serde.workspace   = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace    = true
