[package]
name        = "atlas-ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atlas-core.workspace = true
atlas-math.workspace = true
log.workspace        = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
