[package]
name        = "atlas-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atlas-core.workspace  = true
atlas-math.workspace  = true
log.workspace         = true
thiserror.workspace   = true
ash.workspace         = true
gpu-allocator.workspace = true
winit.workspace       = true
ash-window.workspace  = true
raw-window-handle     = { version = "0.5", features = [] }

[features]
default = ["vulkan"]
vulkan  = []
