[package]
name        = "atlas-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "atlas-workspace"
path = "src/main.rs"

[dependencies]
atlas-core.workspace      = true
atlas-math.workspace      = true
atlas-ecs.workspace       = true
atlas-pcg.workspace       = true
atlas-renderer.workspace  = true
atlas-world.workspace     = true
atlas-input.workspace     = true
atlas-physics.workspace   = true
atlas-sim.workspace       = true
atlas-script.workspace    = true
atlas-animation.workspace = true
atlas-ai.workspace        = true
atlas-sound.workspace     = true
atlas-graphvm.workspace   = true
atlas-net.workspace       = true
atlas-schema.workspace    = true
atlas-abi.workspace       = true
atlas-asset.workspace     = true
atlas-editor.workspace    = true
log.workspace             = true
env_logger.workspace      = true
thiserror.workspace       = true
anyhow.workspace          = true
serde.workspace           = true
serde_json.workspace      = true
