[package]
name        = "atlas-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atlas-core.workspace = true
atlas-math.workspace = true
atlas-ecs.workspace  = true
atlas-pcg.workspace  = true
log.workspace        = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
noise.workspace      = true
rayon.workspace      = true
uuid.workspace       = true
